Patch of 1.4.3 for the following:
- Remove JetBrainsAnnotations.Fody (why wasn't it using JetBrains.Annotations?)
- Make a few properties/classes public so that a custom meta data provider can be properly implemented
- Add support for nested arrays
- Add support for generic types
- Add support for parameter types
- Add support for decimal
- Add support for module tagging
- Consolidate reference naming (.Name vs .FullName vs .FullName + [] vs ModelIdConvention)

--- a/src/Nancy.Swagger.Annotations/Nancy.Swagger.Annotations.csproj
+++ b/src/Nancy.Swagger.Annotations/Nancy.Swagger.Annotations.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Attributes\DatatypeAttribute.cs" />
     <Compile Include="Attributes\ModelAttribute.cs" />
     <Compile Include="Attributes\ModelPropertyAttribute.cs" />
+    <Compile Include="Attributes\ModuleAttribute.cs" />
     <Compile Include="Attributes\RouteAttribute.cs" />
     <Compile Include="Attributes\RouteParamAttribute.cs" />
     <Compile Include="Attributes\Response.cs" />
